welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:7: error: value c is not a member of object java.awt.Color
	def marque(c: Color) {setCouleurBrosse(Color.c);baisseBrosse();leveBrosse();}
                                                     ^